fix anchor jump

--- a/css/customstyles.scss
+++ b/css/customstyles.scss
@@ -148,7 +148,7 @@ h5:target:before,
 h6:target:before {
   content: '';
   display: block;
-  height: 100px;
+  height: 155px;
   margin-top: -100px; }
 
 .post-content {
